--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,17 @@
-stages:
-  - automated-api-tests
+name: Automated API tests using Postman CLI
 
-automated-api-tests:
-  stage: automated-api-tests
-  image: cimg/base:2021.04
-  before_script:
-    # Installing Postman CLI
-    - curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
-  script:
-    # Login using your Postman API keys
-    - postman login --with-api-key $POSTMAN_API_KEY
-    - postman collection run "29421735-d5c7b131-4593-44e2-99b6-6da0df2f5177"
+on: push
+
+jobs:
+  automated-api-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Postman CLI
+        run: |
+          curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+      - name: Login to Postman CLI
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+      - name: Run API tests
+        run: |
+          postman collection run "29421735-d5c7b131-4593-44e2-99b6-6da0df2f5177"
