--- a/.github/workflows/postman_api.yaml
+++ b/.github/workflows/postman_api.yaml
@@ -14,6 +14,4 @@ jobs:
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
       - name: Run API tests
         run: |
-          postman collection run "${{ github.workspace }}/postman/collections/Orders.json" --integration-id "147592-${{ github.run_id }}"
-          # Lint your API using Postman CLI
-          postman api lint fccc27f9-dcc9-46ba-b7f5-340b66901950 --integration-id 147592
+          postman collection run "29421735-d5c7b131-4593-44e2-99b6-6da0df2f5177"
